--- a/style.css
+++ b/style.css
@@ -1,88 +1,57 @@
 /* ===============
     general
 ================= */
+@import url("https://fonts.googleapis.com/css2?family=Hammersmith+One&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  --tajam_teal: #0de2d2;
+  --tajam_blue: #52a9cf;
+  --tajam_black: #1d1d1d;
+  --tajam_txt_dark: #413d4b;
+  --tajam_txt_light: #ffffff;
+}
 
+body {
+  width: 100%;
+  background-image: linear-gradient(#292929, #1d1d1d);
+  min-height: 100vh;
+}
 
-
-
-
+.wrapper {
+  max-width: 1600px; /* maximum widith of content of page */
+  margin: 0 auto; /* this puts content of page in center position */
+}
 
 /* ===============
     Header
 ================= */
 
-
-
-
-
-
-
-
 /* ===============
     out Story
 ================= */
-
-
-
-
-
-
 
 /* ===============
         video
 ================= */
 
-
-
-
-
-
-
-
 /* ===============
     Expertise
 ================= */
-
-
-
-
-
-
-
-
 
 /* ===============
         Team
 ================= */
 
-
-
-
-
-
-
-
 /* ===============
       contact
 ================= */
 
-
-
-
-
-
-
 /* ===============
       footer
 ================= */
-
-
-
-
-
-
-
 
 /* ===============
      Media Q
