--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
 }
 
 body {
-  background-image: linear-gradient(#292929, #1d1d1d);
+  /* background-image: linear-gradient(#292929, #1d1d1d); */
   min-height: 100vh;
   font-family: "Roboto", sans-serif;
   font-size: 14px; /* changed default font size to 14px to look like PSD */
@@ -36,6 +36,12 @@ h1 {
   font-family: "Playfair Display", serif;
   font-size: 24px;
   font-weight: bold;
+}
+h2 {
+  font-family: "Playfair Display", serif;
+  font-size: 24px;
+  font-weight: bold;
+  text-transform: uppercase;
 }
 
 button {
@@ -60,6 +66,68 @@ button:hover {
 /* ===============
     Header
 ================= */
+header{
+  background-image: url(images/bgk-header.png);
+  padding-bottom: 35rem;
+  width: 100%;
+  background-repeat: no-repeat;
+
+}
+header nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  padding-top: 1rem;
+}
+nav div{
+  display: flex;
+  align-items: center;
+}
+
+nav svg{
+  width: 50px;
+  height: 50px;
+}
+nav a {
+  color: white;
+  text-decoration: none;
+  padding: 0em .75em 0em .75em;
+  text-transform: uppercase;
+  font-size: .8rem;
+  font-weight: bolder;
+}
+nav a:hover{
+  color: var(--tajam_teal)
+}
+nav h3 {
+  background: -webkit-linear-gradient(45deg,var(--tajam_teal),var(--tajam_blue));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-weight: 300;
+  font-size: 1.5rem;
+}
+.header_welcoming_msg{
+  display: flex;
+  width: 72%;
+  padding-top: 15em;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 auto;
+}
+header h1{
+  color: white;
+  border-bottom: #0de2d2 solid 1px;
+  padding: 1em 0em ;
+  }
+header p{
+  color: white;
+  text-align: center;
+  padding: 2.5em;
+  font-weight: 300;
+  line-height: 1.5em;
+
+  
+}
 
 /* ===============
        Story
