--- a/style.css
+++ b/style.css
@@ -66,12 +66,11 @@ button:hover {
 /* ===============
     Header
 ================= */
-header{
+header {
   background-image: url(images/bgk-header.png);
   padding-bottom: 35rem;
   width: 100%;
   background-repeat: no-repeat;
-
 }
 header nav {
   display: flex;
@@ -79,34 +78,38 @@ header nav {
   justify-content: space-evenly;
   padding-top: 1rem;
 }
-nav div{
+nav div {
   display: flex;
   align-items: center;
 }
 
-nav svg{
+nav svg {
   width: 50px;
   height: 50px;
 }
 nav a {
   color: white;
   text-decoration: none;
-  padding: 0em .75em 0em .75em;
+  padding: 0em 0.75em 0em 0.75em;
   text-transform: uppercase;
-  font-size: .8rem;
+  font-size: 0.8rem;
   font-weight: bolder;
 }
-nav a:hover{
-  color: var(--tajam_teal)
+nav a:hover {
+  color: var(--tajam_teal);
 }
 nav h3 {
-  background: -webkit-linear-gradient(45deg,var(--tajam_teal),var(--tajam_blue));
+  background: -webkit-linear-gradient(
+    45deg,
+    var(--tajam_teal),
+    var(--tajam_blue)
+  );
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   font-weight: 300;
   font-size: 1.5rem;
 }
-.header_welcoming_msg{
+.header_welcoming_msg {
   display: flex;
   width: 50%;
   padding-top: 15em;
@@ -114,19 +117,17 @@ nav h3 {
   align-items: center;
   margin: 0 auto;
 }
-header h1{
+header h1 {
   color: white;
   border-bottom: #0de2d2 solid 1px;
-  padding: 1em 0em ;
-  }
-header p{
+  padding: 1em 0em;
+}
+header p {
   color: white;
   text-align: center;
   padding: 2.5em;
   font-weight: 300;
   line-height: 1.5em;
-
-  
 }
 
 /* ===============
@@ -172,12 +173,9 @@ header p{
 }
 
 .expertise__container {
-  /* padding: 2rem 0; */
   margin: 3rem auto;
   display: grid;
   grid-template-columns: repeat(auto-fit, 300px);
-  justify-content: center;
-  flex-wrap: wrap;
   max-width: 902px;
   background-color: #ededed;
   gap: 1px;
@@ -197,17 +195,12 @@ header p{
 }
 
 .expertise__card {
-  /* text-align: center; */
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 300px;
   padding: 2rem;
   background-color: var(--tajam_txt_light);
-}
-
-.expertise__card:nth-child(odd) {
-  /* border: 1px solid #ededed; */
 }
 
 .expertise__card-icon {
