added media querys and classes for story and video section

--- a/style.css
+++ b/style.css
@@ -215,5 +215,97 @@ header p {
 ================= */
 
 /* ===============
-     Media Q
+      Media Q
 ================= */
+
+@media (max-width: 992px) {
+  /* media query for Tablet */
+  /* ===============
+    Header
+  ================= */
+
+  /* ===============
+        Story
+  ================= */
+  .story {
+    gap: 40px;
+  }
+  .story_txt {
+    width: 50%;
+  }
+
+  /* ===============
+        video
+  ================= */
+  .video {
+    height: 450px;
+  }
+
+  /* ===============
+    Expertise
+  ================= */
+
+  /* ===============
+        Team
+  ================= */
+
+  /* ===============
+      contact
+  ================= */
+
+  /* ===============
+      footer
+  ================= */
+
+  /* ===============
+      Media Q
+  ================= */
+}
+
+@media (max-width: 576px) {
+  /* media query for smartphone */
+  /* ===============
+    Header
+  ================= */
+
+  /* ===============
+        Story
+  ================= */
+  .story {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+  }
+
+  .story_txt {
+    width: 80%;
+  }
+
+  /* ===============
+        video
+  ================= */
+  .video {
+    height: 400px;
+  }
+
+  /* ===============
+    Expertise
+  ================= */
+
+  /* ===============
+        Team
+  ================= */
+
+  /* ===============
+      contact
+  ================= */
+
+  /* ===============
+      footer
+  ================= */
+
+  /* ===============
+      Media Q
+  ================= */
+}
