--- a/style.css
+++ b/style.css
@@ -84,13 +84,17 @@ nav div {
 }
 
 nav svg {
-  width: 50px;
+  width: 60px;
   height: 50px;
+}
+nav ul{
+  display: flex;
+  gap: 1em
+  ;
 }
 nav a {
   color: white;
   text-decoration: none;
-  padding: 0em 0.75em 0em 0.75em;
   text-transform: uppercase;
   font-size: 0.8rem;
   font-weight: bolder;
@@ -112,7 +116,7 @@ nav h3 {
 .header_welcoming_msg {
   display: flex;
   width: 50%;
-  padding-top: 15em;
+  padding-top: 110px;
   flex-direction: column;
   align-items: center;
   margin: 0 auto;
@@ -121,6 +125,7 @@ header h1 {
   color: white;
   border-bottom: #0de2d2 solid 1px;
   padding: 1em 0em;
+  text-align: center;
 }
 header p {
   color: white;
