--- a/style.css
+++ b/style.css
@@ -77,9 +77,14 @@ header nav {
   justify-content: space-evenly;
   padding-top: 1rem;
 }
-nav div {
+.header_logo {
   display: flex;
   align-items: center;
+  transition: all 0.8s ease-in;
+}
+
+.header_logo.active {
+  transform: translateX(-150px);
 }
 
 nav svg {
@@ -166,7 +171,7 @@ header p {
   width: 0;
   height: 85vh;
   display: flex;
-  flex-direction: column-reverse;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   background: rgba(0, 0, 0, 0.8);
@@ -179,7 +184,7 @@ header p {
   width: 300px;
 }
 
-.mobile_menu div {
+.header_logo_mobile {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -187,6 +192,12 @@ header p {
   margin: 30px;
   background-image: linear-gradient(#2c2749, #100b30);
   border-radius: 10px;
+  transform: translateX(250px);
+  transition: all 0.8s ease-in;
+}
+
+.header_logo_mobile.active {
+  transform: translateX(0);
 }
 
 .mobile_menu ul {
