--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@
   --tajam_txt_light: #ffffff;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: "Roboto", sans-serif;
   font-size: 14px; /* changed default font size to 14px to look like PSD */
