--- a/style.css
+++ b/style.css
@@ -325,7 +325,7 @@ header p {
 
 .team-image {
   background-color: oldlace;
-  width: 250px;px;
+  width: 250px;
   height:240px;
 }
 
@@ -667,4 +667,3 @@ margin: 10px;
   /* ===============
       Media Q
   ================= */
-}
