--- a/style.css
+++ b/style.css
@@ -116,6 +116,7 @@ nav h3 {
     var(--tajam_blue)
   );
   -webkit-background-clip: text;
+  background-clip: text;
   -webkit-text-fill-color: transparent;
   font-weight: 300;
   font-size: 1.5rem;
@@ -427,23 +428,22 @@ header p {
 .team {
   background-image: url(images/bgk-header.png);
   background-size: cover;
-  height: 670px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   width: 100%;
+  padding: 50px;
 }
-
 
 .team h3 {
   text-align: center;
   margin-top: 30px;
-  
+
   color: oldlace;
 }
 
 .Lorem {
-  color:  oldlace;
+  color: oldlace;
   text-align: center;
   margin-bottom: 75px;
 }
@@ -458,12 +458,10 @@ header p {
   flex-wrap: wrap;
 }
 
-
-
 .team-image {
   background-color: oldlace;
   width: 250px;
-  height:240px;
+  height: 240px;
 }
 
 ul .p {
@@ -472,7 +470,6 @@ ul .p {
   text-align: center;
   border: oldlace 1px solid;
   padding-top: 10px;
- 
 }
 
 ul li {
@@ -480,9 +477,8 @@ ul li {
 }
 
 .Become-part {
-
   color: oldlace;
-}  
+}
 
 .p-button {
   margin-bottom: 30px;
@@ -588,36 +584,30 @@ ul li {
 }
 
 .footer-body {
-  color:  oldlace;
+  color: oldlace;
   padding: 30px;
   display: flex;
   justify-content: space-around;
   max-width: 900%;
 }
 
-
-
-.footer-body .tow h3{
+.footer-body .tow h3 {
   margin-bottom: 30px;
 }
 
-.footer-body .tow p{
+.footer-body .tow p {
   margin-bottom: 30px;
 }
-
-
 
 .footer-body p {
-  color: oldlace ;
+  color: oldlace;
   width: 250px;
-  
 }
 
 .three {
   position: relative;
 }
-.footer-body .three p{
-
+.footer-body .three p {
   border: white solid 1px;
   width: 180px;
   height: 40px;
@@ -626,7 +616,6 @@ ul li {
   padding-top: 10px;
   text-align: center;
   opacity: 50%;
-
 }
 
 #paper {
@@ -640,31 +629,24 @@ ul li {
   border-radius: 3px;
 }
 
-.p-nav{
-
+.p-nav {
   display: flex;
   justify-content: space-around;
   color: oldlace;
-
-  
 }
 
-.p-nav nav{
-
+.p-nav nav {
   position: relative;
-  right:110px;
-  
+  right: 110px;
 }
 
 .p-nav nav a {
-margin: 10px;
+  margin: 10px;
 }
 .p-nav p {
-
   position: relative;
   left: 100px;
-  
-
+}
 
 /* ===============
       Media Q
@@ -832,7 +814,4 @@ margin: 10px;
   /* ===============
       footer
   ================= */
-
-  /* ===============
-      Media Q
-  ================= */
+}
