--- a/style.css
+++ b/style.css
@@ -583,8 +583,8 @@ ul li {
 .footer {
   background-image: url(./images/bgk-footer.png);
   background-size: cover;
-  height: 400px;
-  width: 100%;
+  /* height: 400px; */
+  /* width: 100%; */
 }
 
 .footer-body {
@@ -592,7 +592,9 @@ ul li {
   padding: 30px;
   display: flex;
   justify-content: space-around;
-  max-width: 900%;
+  /* max-width: 900%; */
+  flex-wrap: wrap;
+  gap: 15px;
 }
 
 .footer-body .tow h3 {
@@ -635,13 +637,13 @@ ul li {
 
 .p-nav {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   color: oldlace;
 }
 
 .p-nav nav {
   position: relative;
-  right: 110px;
+  /* right: 110px; */
 }
 
 .p-nav nav a {
@@ -649,7 +651,7 @@ ul li {
 }
 .p-nav p {
   position: relative;
-  left: 100px;
+  /* left: 100px; */
 }
 
 /* ===============
@@ -832,4 +834,11 @@ ul li {
   /* ===============
       footer
   ================= */
+
+  .p-nav {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+  }
 }
